--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </p>
     </div>
     <div class="anggota">
-      <h2>Anggota Kelompok</h2>
+      <h2>Anggota Kelompok 5</h2>
       <p>Sellyjuan Alya Rosalina - H1D023006 <br>
         Fatimah Nurmawati - H1D023019 <br>
         Aisyah Syifa Karima - H1D023043 <br>
